# PreTensor

./: .gitignore  README.md  main.py  memory.db  pyproject.toml  txt.txt
docs/: 00-frontmatter.typ  01-introduction.typ  02-dataset.typ  03-methodology.typ  04-system-design.typ  05-results.typ  06-conclusion.typ  07-evaluation.typ  main.typ  refs.bib  style.typ
memory_engine/: pipeline.py
memory_engine/db/: qdrant_client.py  sqlite_client.py
memory_engine/embedding/: onnx_embedder.py
memory_engine/gui/: app.py  theme.py
memory_engine/gui/components/: chat.py  gauge.py  telemetry.py
memory_engine/llm/: orchestrator.py
memory_engine/nlp/: cleaner.py
scripts/: headless_eval.py  seed_mock_data.py
tests/: test_db.py  test_llm.py  test_pipeline.py
